[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://2DToolbox/2DToolbox.gd" type="Script" id=2]
[ext_resource path="res://3DToolbox/ScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://3DToolbox/HideButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/joystix monospace.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.337255, 0.360784, 0.407843, 1 )
border_width_left = 2
border_color = Color( 0.0705882, 0.0901961, 0.141176, 1 )
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 5.0
content_margin_right = 5.0

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 5 )

[node name="2DToolbox" type="PanelContainer"]
margin_right = 256.0
margin_bottom = 456.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 246.0
margin_bottom = 446.0
custom_styles/bg = SubResource( 2 )
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 5.0
margin_right = 231.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 27

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Grid Settings"

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 226.0
margin_bottom = 83.0
focus_mode = 0
text = "Add Point"

[node name="Button2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 226.0
margin_bottom = 144.0
focus_mode = 0
text = "remove point"

[node name="HideButton" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 171.0
margin_right = 226.0
margin_bottom = 191.0
label_name = "Vertical"

[node name="HideButton2" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 218.0
margin_right = 226.0
margin_bottom = 238.0
label_name = "Horizontal"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 10.0
margin_top = 10.0
margin_right = 246.0
margin_bottom = 446.0
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
